--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <li class="nav-item"><a class="nav-link" href="index.php">Inicio</a></li>
                     <li class="nav-item"><a class="nav-link" href="aprende.php">Jugadores</a></li>
                     <li class="nav-item"><a class="nav-link" href="servicios.php">Goleadores</a></li>
-                    <li class="nav-item"><a class="nav-link" href="products.php">Tablas generales</a></li>
+                    <li class="nav-item"><a class="nav-link" href="tablas.html">Tablas generales</a></li>
                 </ul>
                 <div class="div1-efecto"><a class="btn btn-primary shadow div2-efecto" role="button"
                         href="registro.php">Iniciar sesión</a></div>
